welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: ':' expected but identifier found.
def answerCell(boolean isMorning, boolean isMom, boolean isAsleep) {
                       ^answerCell:10: error: identifier expected but '}' found.
 }
 ^